fix: fix tabs stretch variant

--- a/src/components/ITabs/css/_component.scss
+++ b/src/components/ITabs/css/_component.scss
@@ -99,4 +99,12 @@
         color: var(--tabs--header--color, var(--tabs--color));
         background: var(--tabs--header--background, var(--tabs--background));
     }
+
+    &.-stretch {
+        .tabs-header {
+            .tab-title {
+                flex-grow: 1;
+            }
+        }
+    }
 }
